test/pass/call_piping/pipe_to_generic.lly
define f[A](input: A) : A { return input }
define g(input: integer) : integer { return input }

10 |> f |> g
