test/fail/basic_syntax/condition_without_value.lly
#[
SyntaxError: Conditional expression has no value.
    from condition_without_value.lly:7
]#

define f {}
if f():
    f()
